@@ -524,6 +524,16 @@
       <menu>OSD</menu>
       <back>PreviousMenu</back>
       <info>CodecInfo</info>
+      <zero>Number0</zero>
+      <one>Number1</one>
+      <two>Number2</two>
+      <three>Number3</three>
+      <four>Number4</four>
+      <five>Number5</five>
+      <six>Number6</six>
+      <seven>Number7</seven>
+      <eight>Number8</eight>
+      <nine>Number9</nine>
     </remote>
 
     <keyboard>
